modifique css hasta combos

--- a/pages/combos.html
+++ b/pages/combos.html
@@ -12,7 +12,7 @@
 
 <body class="bodyCombos">
     <header> 
-        <nav>
+        <nav class="navCombos">
             <ul> 
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="productos.html">Productos</a></li>
@@ -23,7 +23,7 @@
         </nav>
     </header>
 
-    <h1 class="combos">COMBOS</h1>
+    <h2 class="combos">COMBOS</h2>
     <section  >
         <article class="diferentescombos" >
             <h3 class="diama">Dia de la madre</h3>
