--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body >
+<body class="container-fluid"> 
     <div class="indexContenedor">
             <div class="titulo">Dolcelena</div>
             <div class="subtitulo"> Reposteria artesanal </div>
