--- a/pages/combos.html
+++ b/pages/combos.html
@@ -7,11 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="../imagenes/D.png" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 
 <body class="bodyCombos">
-    <header> 
+    <div class="container-fluid"> <header> 
         <nav class="navCombos">
             <ul> 
                 <li><a href="../index.html">Home</a></li>
@@ -44,16 +45,26 @@
             </li>
         </article>
     </section>
-</body>
-<footer>
-    <!--redes.-->
-    <ul>
-        <li><a href="https://www.facebook.com/profile.php?id=100053755914223">Facebook</a></li>
-        <li> <a href="https://www.instagram.com/dolcelena_/">Instagram</a></li>
-        <li><a href="">Whatsapp</a></li>
-        </ul>
+     <footer>
+        <!--redes.-->
+        <ul>
+            <li><a href="https://www.facebook.com/profile.php?id=100053755914223">Facebook</a></li>
+            <li> <a href="https://www.instagram.com/dolcelena_/">Instagram</a></li>
+            <li><a href="">Whatsapp</a></li>
+            </ul>
+    
+        <h3>Copyright © 2022 Dolcelena| Todos los derechos reservados</h3>
+    </footer>
 
-    <h3>Copyright © 2022 Dolcelena| Todos los derechos reservados</h3>
-</footer>
+    </div>
+   
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>  
+   
+
+
+</body>
+
 
 </html>
