arregle un poco la paleta de colores

--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -12,7 +12,7 @@
 
 <body class="bodyContactanos">
     <header>
-        <nav>
+        <nav class="navContactanos">
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="productos.html">Productos</a></li>
