--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 
     <link rel="stylesheet" href="css/estilos.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 
 </head>
 
@@ -19,9 +23,10 @@
     <header class="row header">
 
         <div>
-            <div class="col-lg-12 col-md-12 col-sm-12 titulo">Dolcelena</div>
-            <div class="col-lg-12 col-md-12 col-sm-12 subtitulo"> Reposteria artesanal </div>
-            <div class="col-lg-12 col-md-12 col-sm-12 navegador">
+           
+            <div class="animate__animated animate__fadeIn col-lg-12 col-md-12 col-sm-12 animate__animated animate__fadeIn titulo">Dolcelena</div>
+            <div class="animate__animated animate__fadeIn col-lg-12 col-md-12 col-sm-12 subtitulo"> Reposteria artesanal </div>
+            <div class="animate__animated animate__fadeIn col-lg-12 col-md-12 col-sm-12 animate__animated animate__fadeIn navegador">
 
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -45,7 +50,7 @@
                     vanguardia, esperamos que lo disfrutes🥧</p>
             </div>
 
-            <div class="col-lg-12 col-md-12 col-sm-12 imagen ">
+            <div class="animate__animated animate__fadeIn col-lg-12 col-md-12 col-sm-12 imagen ">
                 <div class="d-flex justify-content-center">
                     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
