--- a/pages/combos.html
+++ b/pages/combos.html
@@ -11,13 +11,17 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <link rel="stylesheet" href="../css/estilos.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+
 </head>
 
 <body class="container-fluid">
 
     <header class=" row header">
         <div class="col-lg-12 col-md-12 col-sm-12">
-            <nav class=" navCombos">
+            <nav class=" animate__animated animate__fadeIn navCombos">
                 <ul>
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="productos.html">Productos</a></li>
@@ -33,20 +37,20 @@
 
     <section class="row main">
         <div class="col-lg-12 col-md-12 col-sm-12"">
-                <h2 class=" col-lg-12 col-md-12 col-sm-12 combos">COMBOS</h2>
+                <h2 class="animate__animated animate__fadeIn col-lg-12 col-md-12 col-sm-12 combos">COMBOS</h2>
 
             <article class="diferentescombos">
-                <h2 class=" col-lg-3 col-md-12 col-sm-12  diama">Dia de la madre</h2>
-                <img class=" rounded madre" src="../imagenes/combo 1.jpg" alt="COMBO 1" width="295" height="300" />
+                <h2 class="col-lg-12 col-md-12 col-sm-12 animate__animated animate__fadeIn col-lg-3 col-md-12 col-sm-12  diama">Dia de la madre</h2>
+                <img class="animate__animated animate__zoomIn rounded madre" src="../imagenes/combo 1.jpg" alt="COMBO 1" width="295" height="300" />
 
-                <h2 class="col-lg-3 col-md-12 col-sm-12  diapa">Dia del Padre</h2>
-                <img class="rounded padre" src="../imagenes/combo 2.jpg" alt="COMBO 2" width="295" height="300" />
+                <h2 class="col-lg-12 col-md-12 col-sm-12 animate__animated animate__fadeIn col-lg-3 col-md-12 col-sm-12  diapa">Dia del Padre</h2>
+                <img class="animate__animated animate__zoomIn rounded padre" src="../imagenes/combo 2.jpg" alt="COMBO 2" width="295" height="300" />
 
-                <h2 class="col-lg-3 col-md-12 col-sm-12 diaA">Dia del Amigo</h2>
-                <img class="rounded diaA" src="../imagenes/combo 3.jpg" alt="COMBO 3" width="295" height="300" />
+                <h2 class="col-lg-12 col-md-12 col-sm-12 animate__animated animate__fadeIn col-lg-3 col-md-12 col-sm-12 diaA">Dia del Amigo</h2>
+                <img class="animate__animated animate__zoomIn rounded diaA" src="../imagenes/combo 3.jpg" alt="COMBO 3" width="295" height="300" />
 
-                <h2 class="col-lg-3 col-md-12 col-sm-12 diapascuas">Especial Pascuas</h2>
-                <img class="rounded diapas" src="../imagenes/combo especial pascuas.jpg" alt="COMBO Pascuas" width="295"
+                <h2 class="col-lg-12 col-md-12 col-sm-12 animate__animated animate__fadeIn col-lg-3 col-md-12 col-sm-12 diapascuas">Especial Pascuas</h2>
+                <img class="animate__animated animate__zoomIn rounded diapas" src="../imagenes/combo especial pascuas.jpg" alt="COMBO Pascuas" width="295"
                     height="300" />
             </article>
         </div>
