--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -11,11 +11,14 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 
     <link rel="stylesheet" href="../css/estilos.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
 
 <body class="container-fluid">
     <header>
-        <nav class="navContactanos">
+        <nav class="animate__animated animate__fadeIn navContactanos">
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="productos.html">Productos</a></li>
@@ -25,13 +28,13 @@
             </ul>
         </nav>
     </header>
-    <article class=" batiendoconamor"><img src="../imagenes/batiendo con amor cada historia.jpg" alt="distintos productos" width="300" height="300" class="rounded-3" />
+    <article class=" batiendoconamor"><img src="../imagenes/batiendo con amor cada historia.jpg" alt="distintos productos" width="300" height="300" class="animate__animated animate__lightSpeedInRight rounded-3" />
     </article>
     
 
-    <h2 class="Queremos">Queremos Saber sobre vos!</h2>
+    <h2 class="animate__animated animate__lightSpeedInRight Queremos">Queremos Saber sobre vos!</h2>
     <div class="info">
-         <form class="border border-5" >
+         <form class="border border-5">
             <li><input type="text" placeholder="Ingrese su nombre" /></li>
             <li><input type="text" placeholder="Ingrese su Apellido" /></li>
             <li><input type="email" placeholder="Ingrese su E-mail" /></li>
