--- a/pages/nosotras.html
+++ b/pages/nosotras.html
@@ -10,12 +10,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
     <link rel="stylesheet" href="../css/estilos.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+
 </head>
 
 <body class="container-fluid" >
     <header class="row header nosotrasContenedor">
         <div class="col-lg-12 col-md-12 col-sm-12">
-            <div class="navNosotras">
+            <div class="animate__animated animate__fadeIn navNosotras">
                 <ul>
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="productos.html">Productos</a></li>
@@ -24,21 +28,21 @@
                     <li><a href="contactanos.html">Contactanos</a></li>
                 </ul>
             </div>
-            <h1 class="col-lg-12 col-md-12 col-sm-12 nosotras">Nuestra historia...</h1>
+            <h1 class="animate__animated animate__fadeIn col-lg-12 col-md-12 col-sm-12 nosotras">Nuestra historia...</h1>
 
         </div>
         
     </header>
     <main class="row main">
         <div class=" col-lg-12 col-md-12 col-sm-12 nosotrasHistoria">
-            <p>Hola, me presento, soy Maria Elena Gomez y ella es mi madre Claudia, con ella decidimos comenzar con
+            <p class="parrafe">Hola, me presento, soy Maria Elena Gomez y ella es mi madre Claudia, con ella decidimos comenzar con
             nuestro "pequeño emprendimiento" por problemas económicos durante la pandemia,impulsadas,fuertes y
             firmes hacia un futuro mejor, creamos estas delicias que representan un poco/mucho el amor, las recetas,
             y la historia de nuestra familia.
             Animate a probarlas! </p>
         </div>
         
-        <section class="d-flex justify-content-center fondoFoto">
+        <section class="animate__animated animate__fadeIn  d-flex justify-content-center fondoFoto">
             <img src="../imagenes/dolcelena con su mama.jpg" alt="Niña con su madre" width="300 " height="300" />
         </section>
 
