--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 
     <link rel="stylesheet" href="css/estilos.css">
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
 </head>
 
@@ -23,10 +20,14 @@
     <header class="row header">
 
         <div>
-           
-            <div class="animate__animated animate__fadeIn col-lg-12 col-md-12 col-sm-12 animate__animated animate__fadeIn titulo">Dolcelena</div>
-            <div class="animate__animated animate__fadeIn col-lg-12 col-md-12 col-sm-12 subtitulo"> Reposteria artesanal </div>
-            <div class="animate__animated animate__fadeIn col-lg-12 col-md-12 col-sm-12 animate__animated animate__fadeIn navegador">
+
+            <div
+                class="animate__animated animate__fadeIn col-lg-12 col-md-12 col-sm-12 animate__animated animate__fadeIn titulo">
+                Dolcelena</div>
+            <div class="animate__animated animate__fadeIn col-lg-12 col-md-12 col-sm-12 subtitulo"> Reposteria artesanal
+            </div>
+            <div
+                class="animate__animated animate__fadeIn col-lg-12 col-md-12 col-sm-12 animate__animated animate__fadeIn navegador">
 
                 <ul>
                     <li><a href="index.html">Home</a></li>
