Arreglo entrega sass

--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -16,7 +16,7 @@
 
 <body class="container-fluid">
     <header>
-        <nav class="animate__animated animate__fadeIn navContactanos">
+        <nav class="animate__animated animate__fadeIn navegador ">
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="productos.html">Productos</a></li>
