--- a/pages/nosotras.html
+++ b/pages/nosotras.html
@@ -16,7 +16,7 @@
 <body class="container-fluid">
     <header class="row header nosotrasContenedor">
         <div class="col-lg-12 col-md-12 col-sm-12">
-            <div class="animate__animated animate__fadeIn navNosotras">
+            <div class="animate__animated animate__fadeIn navegador">
                 <ul>
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="productos.html">Productos</a></li>
