--- a/pages/combos.html
+++ b/pages/combos.html
@@ -21,7 +21,7 @@
 
     <header class=" row header">
         <div class="col-lg-12 col-md-12 col-sm-12">
-            <nav class=" animate__animated animate__fadeIn navCombos">
+            <nav class=" animate__animated animate__fadeIn navegador">
                 <ul>
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="productos.html">Productos</a></li>
