--- a/pages/combos.html
+++ b/pages/combos.html
@@ -10,9 +10,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="/css/style.scss">
-    <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 
 </head>
 
@@ -34,8 +33,8 @@
     </header>
 
 
-    <section class="row main">
-        <div class="col-lg-12 col-md-12 col-sm-12"">
+    <main class="row main">
+        <div class="col-lg-12 col-md-12 col-sm-12">
                 <h2 class="animate__animated animate__fadeIn col-lg-12 col-md-12 col-sm-12 combos">COMBOS</h2>
 
             <article class="diferentescombos">
@@ -53,7 +52,7 @@
                     height="300" />
             </article>
         </div>
-    </section>
+    </main>
 
     <footer class="row footer">
         <!--redes.-->
