--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
 
             <div class="animate__animated animate__fadeIn col-lg-12 col-md-12 col-sm-12 imagen ">
-                <div class="d-flex justify-content-center">
+                <div class="d-flex justify-content-center carrusel">
                     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
