--- a/pages/productos.html
+++ b/pages/productos.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="../imagenes/D.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="../css/style.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
 
@@ -31,20 +31,23 @@
 
     <main class="row main">
 
-
+        
         <img class="animate__animated  animate__fadeInUp col-lg-4 col-md-6 col-sm-12 chipacitos"
-            src="../imagenes/chipacitos cocinados.jpg" alt="chipacitos" width=" 100" height="250" />
+            src="../imagenes/chipacitos cocinados.jpg" alt="chipacitos" width="90" height="250" />
         <img class="animate__animated  animate__fadeInUp col-lg-4 col-md-6 col-sm-12 pastafrola"
-            src="../imagenes/pastafrola.jpg" alt="pastafrola" width="100" height="250" />
+            src="../imagenes/pastafrola.jpg" alt="pastafrola" width="90" height="250" />
         <img class="animate__animated  animate__fadeInUp col-lg-4 col-md-6 col-sm-12 milhojas"
-            src="../imagenes/milhojasss.jpg" alt="milhojasss" width="100" height="250" />
+            src="../imagenes/milhojasss.jpg" alt="milhojasss" width="90" height="250" />
         <img class="animate__animated  animate__fadeInUp col-lg-4 col-md-6 col-sm-12 rogelitos"
-            src="../imagenes/rogelitos.jpg" alt="torta rogelitos" width="100" height="250" />
+            src="../imagenes/rogelitos.jpg" alt="torta rogelitos" width="90" height="250" />
         <img class="animate__animated  animate__fadeInUp col-lg-4 col-md-6 col-sm-12 selva"
-            src="../imagenes/selva negra.jpg" alt="torta selva negra" width=" 100" height="250" />
+            src="../imagenes/selva negra.jpg" alt="torta selva negra" width="90" height="250" />
         <img class="animate__animated  animate__fadeInUp col-lg-4 col-md-6 col-sm-12 chipasconge"
-            src="../imagenes/chipacitos congelados.jpg" alt="alimentos congelados" width="100" height="250" />
-
+            src="../imagenes/chipacitos congelados.jpg" alt="alimentos congelados" width="90" height="250" />
+        <!--<img class="animate__animated  animate__fadeInUp col-lg-4 col-md-6 col-sm-12 chipasconge"
+            src="../imagenes/combo 1.jpg" alt="alimentos congelados" width="90" height="250" />
+        <img class="animate__animated  animate__fadeInUp col-lg-4 col-md-6 col-sm-12 chipasconge"
+            src="../" alt="alimentos congelados" width="90" height="250" /!-->
 
     </main>
     <footer class="row footer">
