--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name= "description" content= "Las mejores comidas dulces artesanales para acompañar tu desayuno o merienda, para regalar a esa persona especial o solo para darte el gusto, entra y tentate, todo esta realizado con mucho amor">
+    <meta name="keywords" content="dolcelena,elena, artesanal, comida, dulces,chipacitos,panaderia,pedidos,tortas,dia especial, pascuas, madre, padre">
     <link rel="icon" href="./imagenes/D.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
