agregando modificaciones a mi proyecto  para la tercera entrega

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
                 Dolcelena</div>
             <div class="animate__animated animate__fadeIn col-lg-12 col-md-12 col-sm-12 subtitulo"> Reposteria artesanal
             </div>
-            <div
-                class="animate__animated animate__fadeIn col-lg-12 col-md-12 col-sm-12 animate__animated animate__fadeIn navegador">
+            <div class="animate__animated animate__fadeIn col-lg-12 col-md-12 col-sm-12 animate__animated animate__fadeIn navegador">
 
                 <ul>
                     <li><a href="index.html">Home</a></li>
