--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -6,60 +6,71 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="dolcelena,elena, artesanal, comida, dulces,chipacitos,panaderia,pedidos,tortas,dia especial, pascuas, madre, padre">
+    <meta name="keywords"
+        content="dolcelena,elena, artesanal, comida, dulces,chipacitos,panaderia,pedidos,tortas,dia especial, pascuas, madre, padre" />
     <link rel="shortcut icon" href="../imagenes/D.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body class="container-fluid">
-    <header>
-        <nav class="animate__animated animate__fadeIn navegador ">
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="productos.html">Productos</a></li>
-                <li><a href="combos.html">Combos</a></li>
-                <li><a href="nosotras.html">Nosotras</a></li>
-                <li><a href="contactanos.html">Contactanos</a></li>
-            </ul>
-        </nav>
+    <header clas="row header">
+        <div class="col-lg-12 col-md-12 col-sm-12">
+            <div class="animate__animated animate__fadeIn navegador">
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="productos.html">Productos</a></li>
+                    <li><a href="combos.html">Combos</a></li>
+                    <li><a href="nosotras.html">Nosotras</a></li>
+                    <li><a href="contactanos.html">Contactanos</a></li>
+                </ul>
+            </div>
+        </div>
     </header>
-    <article class=" batiendoconamor"><img src="../imagenes/batiendo con amor cada historia.jpg"
-            alt="distintos productos" width="300" height="300"
-            class="animate__animated animate__lightSpeedInRight rounded-3" />
-    </article>
+    <main class="row main ">
+        <div >
+            <div class="batiendoconamor justify-content-center ">
+                <img src="../imagenes/batiendo con amor cada historia.jpg" alt="distintos productos" width="300"
+                    height="300" class=" rounded-3 queremos" />
+            </div>
 
+            <h2 class="animate__animated animate__lightSpeedInRight Queremos">
+                Queremos Saber sobre vos!
+            </h2>
+            <div class="info">
+                <form class="justify-content-center ">
+                    <li><input type="text" placeholder="Ingrese su nombre" /></li>
+                    <li><input type="text" placeholder="Ingrese su Apellido" /></li>
+                    <li><input type="email" placeholder="Ingrese su E-mail" /></li>
+                    <li>
+                        <select name="" id="">
+                            <option value="arg">Argentina</option>
+                            <option value="ur">Uruguay</option>
+                            <option value="Pa">Paraguay</option>
+                        </select>
+                    </li>
+                    <li>
+                        <textarea name="" id="" cols="30" rows="10" placeholder="Ingrese su historia"></textarea>
+                    </li>
+                    <input type="checkbox" value="1" class="justify-content-center"/>Acepta recibir promociones y
+                    ofertas.
 
-    <h2 class="animate__animated animate__lightSpeedInRight Queremos">Queremos Saber sobre vos!</h2>
-    <div class="info">
-        <form class="border border-5">
-            <li><input type="text" placeholder="Ingrese su nombre" /></li>
-            <li><input type="text" placeholder="Ingrese su Apellido" /></li>
-            <li><input type="email" placeholder="Ingrese su E-mail" /></li>
-            <li>
-                <select name="" id="">
-                    <option value="arg">Argentina</option>
-                    <option value="ur">Uruguay</option>
-                    <option value="Pa">Paraguay</option>
-                </select>
-            </li>
-            <li>
-                <textarea name="" id="" cols="30" rows="10" placeholder="Ingrese su historia"></textarea>
-            </li>
-            <input type="checkbox" value="1" />Acepta recibir promociones y ofertas.
+                    <input type="submit" />
+                    <input type="reset" value="Ups, me equivoqué" />
+                </form>
+            </div>
+        </div>
+    </main>
 
-            <input type="submit" />
-            <input type="reset" value="Ups, me equivoqué" />
-        </form>
-    </div>
-
-    <footer>
+    <footer class="row footer">
         <ul>
-            <li><a href="https://www.facebook.com/profile.php?id=100053755914223">Facebook</a></li>
-            <li> <a href="https://www.instagram.com/dolcelena_/">Instagram</a></li>
+            <li>
+                <a href="https://www.facebook.com/profile.php?id=100053755914223">Facebook</a>
+            </li>
+            <li><a href="https://www.instagram.com/dolcelena_/">Instagram</a></li>
             <li><a href="">Whatsapp</a></li>
         </ul>
 
@@ -73,8 +84,5 @@
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
 </body>
-
-
-
 
 </html>
