--- a/pages/nosotras.html
+++ b/pages/nosotras.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="../imagenes/D.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
@@ -43,8 +43,8 @@
             </p>
         </div>
 
-        <section class="animate__animated animate__fadeIn d-flex justify-content-center fondoFoto">
-            <img src="../imagenes/dolcelena con su mama.jpg" alt="Niña con su madre" width="300 " height="300" />
+        <section class="animate__animated animate__fadeIn d-flex justify-content-center fondoFoto responsive rounded" >
+            <img src="../imagenes/dolcelena con su mama.jpg" class= "responsive rounded"alt="Niña con su madre" width="350 " height="350" />
         </section>
     </main>
 
