--- a/pages/productos.html
+++ b/pages/productos.html
@@ -30,7 +30,7 @@
         </div>
     </header>
 
-    <main class="row main">
+    <main class="row main justify-content-center">
 
         
         <img class="animate__animated  animate__fadeInUp col-lg-4 col-md-6 col-sm-12 chipacitos"
