arreglando fuentes y formulario

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-
+   
 </head>
 
 <body class="container-fluid">
@@ -28,8 +28,8 @@
                 Dolcelena</div>
             <div class="animate__animated animate__fadeIn col-lg-12 col-md-12 col-sm-12 subtitulo"> Reposteria artesanal
             </div>
-            <div class="animate__animated animate__fadeIn col-lg-12 col-md-12 col-sm-12 animate__animated animate__fadeIn navegador">
-
+            <div class="navegador">
+                
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="pages/productos.html">Productos</a></li>
@@ -48,8 +48,8 @@
                 <p class="parrafito"> Bienvenidx, pasá, tentate. Esta página está llena de dulzura y delicias para vos.
                     Te cuento que todo es elaboración 100% artesanal y cuidamos cada detalle. Las manos detrás de
                     nuestras
-                    creaciones somos mi mamá y yo👩🏻‍🍳👩🏻‍🍳. Entre las dos logramos sabores clásicos con toques de
-                    vanguardia, esperamos que lo disfrutes🥧</p>
+                    creaciones somos mi mamá y yo Entre las dos logramos sabores clásicos con toques de
+                    vanguardia, esperamos que lo disfrutes</p>
             </div>
 
             <div class="animate__animated animate__fadeIn col-lg-12 col-md-12 col-sm-12 imagen ">
