--- a/pages/combos.html
+++ b/pages/combos.html
@@ -13,7 +13,10 @@
 
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+ <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+ <link href="https://fonts.googleapis.com/css2?family=Katibeh&display=swap" rel="stylesheet">
 </head>
 
 <body class="container-fluid">
@@ -35,36 +38,53 @@
 
 
     <main class="row main">
-        <div class="col-lg-12 col-md-12 col-sm-12">
-                <h2 class="animate__animated animate__fadeIn col-lg-12 col-md-12 col-sm-12 combos">COMBOS</h2>
+        <div >
+                <h1 class="animate__animated animate__fadeIn col-lg-12 col-md-12 col-sm-12 combos">COMBOS</h1>
 
             <article class="diferentescombos">
                 <h2 class="col-lg-12 col-md-12 col-sm-12 animate__animated animate__fadeIn col-lg-3 col-md-12 col-sm-12  diama">Dia de la madre</h2>
-                <img class="animate__animated animate__zoomIn rounded madre" src="../imagenes/combo 1.jpg" alt="COMBO 1" width="295" height="300" />
+                <img class="animate__animated animate__zoomIn rounded madre" src="../imagenes/combo 1.jpg" alt="COMBO 1" width="500px" height="600px" />
 
                 <h2 class="col-lg-12 col-md-12 col-sm-12 animate__animated animate__fadeIn col-lg-3 col-md-12 col-sm-12  diapa">Dia del Padre</h2>
-                <img class="animate__animated animate__zoomIn rounded padre" src="../imagenes/combo 2.jpg" alt="COMBO 2" width="295" height="300" />
+                <img class="animate__animated animate__zoomIn rounded madre" src="../imagenes/combo 2.jpg" alt="COMBO 2" width="500px" height="600px" />
 
                 <h2 class="col-lg-12 col-md-12 col-sm-12 animate__animated animate__fadeIn col-lg-3 col-md-12 col-sm-12 diaA">Dia del Amigo</h2>
-                <img class="animate__animated animate__zoomIn rounded diaA" src="../imagenes/combo 3.jpg" alt="COMBO 3" width="295" height="300" />
+                <img class="animate__animated animate__zoomIn rounded madre" src="../imagenes/combo 3.jpg" alt="COMBO 3" width="500px" height="600px" />
 
                 <h2 class="col-lg-12 col-md-12 col-sm-12 animate__animated animate__fadeIn col-lg-3 col-md-12 col-sm-12 diapascuas">Especial Pascuas</h2>
-                <img class="animate__animated animate__zoomIn rounded diapas" src="../imagenes/combo especial pascuas.jpg" alt="COMBO Pascuas" width="295"
-                    height="300" />
+                <img class="animate__animated animate__zoomIn rounded madre" src="../imagenes/combo especial pascuas.jpg" alt="COMBO Pascuas" width="500px"
+                    height="600px" />
             </article>
         </div>
     </main>
 
     <footer class="row footer">
-        <!--redes.-->
-        <ul>
-            <li><a href="https://www.facebook.com/profile.php?id=100053755914223">Facebook</a></li>
-            <li> <a href="https://www.instagram.com/dolcelena_/">Instagram</a></li>
-            <li><a href="">Whatsapp</a></li>
-        </ul>
-
-        <h3>Copyright © 2022 Dolcelena| Todos los derechos reservados</h3>
+        <div class="container ">
+            <div class="row">
+                <div class="col-4 d-flex
+                        justify-content-center
+                        paddingBS">
+                    <a href="https://www.facebook.com/profile.php?id=100053755914223" target="_blank"><img
+                            src="../imagenes/facebookkk.png" alt="facebook" class="logoFooter"width="55px" height="55px" ></a>
+                </div>
+                <div class="col-4 d-flex
+                        justify-content-center
+                        paddingBS">
+                    <a href="" target="_blank"><img src="../imagenes/whatsapp (2).png"
+                            alt="whatsapp" class="logoFooter"width="55px" height="55px" ></a>
+                </div>
+                <div class="col-4 d-flex
+                        justify-content-center
+                        paddingBS">
+                        
+                    <a href="https://www.instagram.com/dolcelena_/" target="_blank"><img
+                            src="../imagenes/instagrammm.png" alt="instagram" class="logoFooter" width="55px" height="55px"></a>
+                </div>
+            </div>
+            <h3>Copyright © 2022 Dolcelena| Todos los derechos reservados</h3>
+        </div>
     </footer>
+    
 
 
 
