--- a/pages/nosotras.html
+++ b/pages/nosotras.html
@@ -12,6 +12,13 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Katibeh&display=swap" rel="stylesheet">
+</head>
+
 </head>
 
 <body class="container-fluid">
@@ -34,30 +41,42 @@
     <main class="row main">
         <div class="col-lg-12 col-md-12 col-sm-12 nosotrasHistoria">
             <p class="parrafe">
-                Hola, me presento, soy Maria Elena Gomez y ella es mi madre Claudia,
-                con ella decidimos comenzar con nuestro "pequeño emprendimiento" por
-                problemas económicos durante la pandemia,impulsadas,fuertes y firmes
-                hacia un futuro mejor, creamos estas delicias que representan un
-                poco/mucho el amor, las recetas, y la historia de nuestra familia.
+                Soy Maria Elena Gomez, durante la pandemia
+                decidimos comenzar  nuestro "pequeño emprendimiento"con mi querida madre Claudia  ;Impulsadas,fuertes y firmes
+                hacia un futuro mejor, creamos estas delicias que representan
+                 el amor, las recetas, y la historia de nuestra familia.
                 Animate a probarlas!
             </p>
         </div>
 
         <section class="animate__animated animate__fadeIn d-flex justify-content-center fondoFoto responsive rounded" >
-            <img src="../imagenes/dolcelena con su mama.jpg" class= "responsive rounded"alt="Niña con su madre" width="350 " height="350" />
+            <img src="../imagenes/dolcelena con su mama.jpg" class= "niña img-fluid " alt="Niña con su madre" />
         </section>
     </main>
 
     <footer class="row footer">
-        <div class="col-lg-12 col-md-12 col-sm-12">
-            <ul>
-                <li>
-                    <a href="https://www.facebook.com/profile.php?id=100053755914223">Facebook</a>
-                </li>
-                <li><a href="https://www.instagram.com/dolcelena_/">Instagram</a></li>
-                <li><a href="">Whatsapp</a></li>
-            </ul>
-
+        <div class="container-fluid ">
+            <div class="row">
+                <div class="col-4 d-flex
+                        justify-content-center
+                        paddingBS">
+                    <a href="https://www.facebook.com/profile.php?id=100053755914223" target="_blank"><img
+                            src="../imagenes/facebookkk.png" alt="facebook" class="logoFooter"width="55px" height="55px" ></a>
+                </div>
+                <div class="col-4 d-flex
+                        justify-content-center
+                        paddingBS">
+                    <a href="" target="_blank"><img src="../imagenes/whatsapp (2).png"
+                            alt="whatsapp" class="logoFooter"width="55px" height="55px" ></a>
+                </div>
+                <div class="col-4 d-flex
+                        justify-content-center
+                        paddingBS">
+                        
+                    <a href="https://www.instagram.com/dolcelena_/" target="_blank"><img
+                            src="../imagenes/instagrammm.png" alt="instagram" class="logoFooter" width="55px" height="55px"></a>
+                </div>
+            </div>
             <h3>Copyright © 2022 Dolcelena| Todos los derechos reservados</h3>
         </div>
     </footer>
