--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -14,6 +14,12 @@
 
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Katibeh&display=swap" rel="stylesheet">
 </head>
 
 <body class="container-fluid ">
@@ -53,7 +59,7 @@
                         </select>
                     </div>
                     <div class="form group">
-                        <textarea name="mensaje" cols="30" rows="4" placeholder="Deja tu historia o mensaje aquí:"
+                        <textarea name="mensaje" cols="30" rows="4" placeholder="Deja tu mensaje aquí:"
                             class="form-control"></textarea>
                     </div>
                     <button type="submit" value="Enviar Mensaje" class="btn btn-primary btn-block btn">ENVIAR</button>
