--- a/pages/combos.html
+++ b/pages/combos.html
@@ -70,7 +70,7 @@
                 <div class="col-4 d-flex
                         justify-content-center
                         paddingBS">
-                    <a href="" target="_blank"><img src="../imagenes/whatsapp (2).png"
+                    <a href="" target="_blank"><img src="../imagenes/whatsapp.png"
                             alt="whatsapp" class="logoFooter"width="55px" height="55px" ></a>
                 </div>
                 <div class="col-4 d-flex
