--- a/pages/productos.html
+++ b/pages/productos.html
@@ -43,15 +43,15 @@
         <img class=" img-fluid animate__animated  animate__fadeInUp col-lg-4 col-md-6 col-sm-12 chipacitos"
             src="../imagenes/chipacitos cocinados.jpg" alt="chipacitos" />
         <img class="img-fluid animate__animated  animate__fadeInUp col-lg-4 col-md-6 col-sm-12 pastafrola"
-            src="../imagenes/pastafrola.jpg" alt="pastafrola" width="90" height="250" />
+            src="../imagenes/pastafrola.jpg" alt="pastafrola" />
         <img class="img-fluid  animate__animated  animate__fadeInUp col-lg-4 col-md-6 col-sm-12 milhojas"
-            src="../imagenes/milhojasss.jpg" alt="milhojasss" width="90" height="250" />
+            src="../imagenes/milhojasss.jpg" alt="milhojasss"  />
         <img class= " img-fluid animate__animated  animate__fadeInUp col-lg-4 col-md-6 col-sm-12 rogelitos"
-            src="../imagenes/rogelitos.jpg" alt="torta rogelitos" width="90" height="250" />
+            src="../imagenes/rogelitos.jpg" alt="torta rogelitos"  />
         <img class="img-fluid animate__animated  animate__fadeInUp col-lg-4 col-md-6 col-sm-12 selva"
-            src="../imagenes/selva negra.jpg" alt="torta selva negra" width="90" height="250" />
+            src="../imagenes/selva negra.jpg" alt="torta selva negra"  />
         <img class="img-fluid animate__animated  animate__fadeInUp col-lg-4 col-md-6 col-sm-12 chipasconge"
-            src="../imagenes/chipacitos congelados.jpg" alt="alimentos congelados" width="90" height="250" />
+            src="../imagenes/chipacitos congelados.jpg" alt="alimentos congelados"  />
        
 
     </main>
@@ -67,7 +67,7 @@
                 <div class="col-4 d-flex
                         justify-content-center
                         paddingBS">
-                    <a href="" target="_blank"><img src="../imagenes/whatsapp (2).png"
+                    <a href="" target="_blank"><img src="../imagenes/whatsapp.png"
                             alt="whatsapp" class="logoFooter"width="55px" height="55px" ></a>
                 </div>
                 <div class="col-4 d-flex
